@@ -2,6 +2,7 @@
 - monetdb_queryinfo method to find out things about an arbitrary query cheaply
 - new options monetdb.sequential, monetdb.debug.query and monetdb.debug.mapi
 - debug output now uses the message() function
+- reinstated warning about monetdb:// db urls, we do not like them
 
 0.9.1
 - dbGetInfo() now supported on MonetDBConnection (dplyr compatibility)
